Fixed views to be more readable. Created working links between animal class and species.

--- a/faunaround/faunaweb/static/css/style.css
+++ b/faunaround/faunaweb/static/css/style.css
@@ -85,6 +85,14 @@ a:hover {
     display: block;
     margin: auto;
 }
+.flex-species-box {
+    border: 2px solid #064420;
+    background-color: #E4EFE7;
+    border-radius: 10px;
+    padding: 10px;
+    width: 600px;
+    height: auto;
+}
 .paginator {
     padding: 1rem;
     font-size: 16px;
